src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A25_1.cd
/*
 * ******************************************************************************
 * MontiCore Language Workbench, www.monticore.de
 * Copyright (c) 2017, MontiCore, All rights reserved.
 *
 * This project is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3.0 of the License, or (at your option) any later version.
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this project. If not, see <http://www.gnu.org/licenses/>.
 * ******************************************************************************
 */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A25_1 {

  class A {
    String attrA1;
    String attrA2;
    String attrA3;
    String attrA4;
    String attrA5;
    String attrA6;
  }

  class B;

  association attrA1 A -> B;
  association attrA2 A <-> B;
  association attrA3 B <-> A;
  association attrA4 A -- B;
  association attrA5 B -- A;
  association attrA6 B <- A;
}
